# NES-Learning-Environment

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-wheels.yml
crates/nesle-common/: Cargo.toml
crates/nesle-common/src/: action.rs  audio.rs  error.rs  frame.rs  lib.rs  palette.rs  settings.rs
crates/nesle-core/: Cargo.toml
crates/nesle-core/src/: apu.rs  bus.rs  core.rs  cpu.rs  input.rs  lib.rs  ppu.rs  state.rs
crates/nesle-core/src/cartridge/: fds.rs  image.rs  ines.rs  mod.rs  unif.rs
crates/nesle-core/src/mapper/: axrom.rs  banking.rs  cnrom.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc5.rs  mod.rs  nrom.rs  sunsoft5.rs  traits.rs  uxrom.rs
crates/nesle-py/: Cargo.toml
crates/nesle-py/python/nesle/: __init__.py  agent_client.py  env.py  preprocessing.py  registration.py  vector_env.py
crates/nesle-py/python/nesle/roms/: __init__.py
crates/nesle-py/src/: env.rs  errors.rs  human_window.rs  interface.rs  lib.rs  metadata.rs  state.rs  vector.rs  viewer.rs
crates/nesle-rl/: Cargo.toml
crates/nesle-rl/assets/start_states/adventure_island/: level_1.state
crates/nesle-rl/assets/start_states/bomberman/: level_1.state  level_10.state  level_20.state  level_30.state  level_40.state  level_50.state
crates/nesle-rl/assets/start_states/bomberman_2/battle/: level_1.state
crates/nesle-rl/assets/start_states/bomberman_2/normal/: level_1_1.state  level_1_2.state  level_2_1.state
crates/nesle-rl/assets/start_states/bomberman_2/vs/: level_1.state
crates/nesle-rl/assets/start_states/castlevania/: level_1.state
crates/nesle-rl/assets/start_states/duck_tales/: level_1.state
crates/nesle-rl/assets/start_states/ice_hockey/1p/: level_1.state
crates/nesle-rl/assets/start_states/ice_hockey/2p/: level_1.state
crates/nesle-rl/assets/start_states/kung_fu/: level_1.state  level_2.state  level_3.state
crates/nesle-rl/assets/start_states/mario_bros/: level_1.state
crates/nesle-rl/assets/start_states/mega_man_2/: level_1.state
crates/nesle-rl/assets/start_states/pac_man/: level_1.state
crates/nesle-rl/assets/start_states/r_c_pro_am_2/: level_1.state
crates/nesle-rl/assets/start_states/roundball_2on2/: level_1.state
crates/nesle-rl/assets/start_states/super_c/1p/: level_1.state  level_2.state  level_3.state  level_4.state  level_5.state  level_6.state  level_7.state
crates/nesle-rl/assets/start_states/super_c/2p/: level_1.state  level_2.state  level_3.state  level_4.state  level_5.state  level_6.state  level_7.state
crates/nesle-rl/assets/start_states/super_mario_bros/: level_1_1.state
crates/nesle-rl/assets/start_states/super_mario_bros_2/: level_1_1.state
crates/nesle-rl/assets/start_states/super_mario_bros_3/: level_1_1.state
crates/nesle-rl/src/: autoreset.rs  constants.rs  env.rs  interface.rs  lib.rs  preprocess.rs  start_state.rs  test_support.rs  vector.rs
crates/nesle-rl/src/games/: mod.rs  registry.rs  spec.rs
crates/nesle-rl/src/games/supported/: adventure_island.rs  bomberman.rs  bomberman_2.rs  castlevania.rs  duck_tales.rs  ice_hockey.rs  kung_fu.rs  mario_bros.rs  mega_man_2.rs  mod.rs  pac_man.rs  r_c_pro_am_2.rs  roundball_2on2.rs  super_c.rs  super_mario_bros.rs  super_mario_bros_2.rs  super_mario_bros_3.rs
crates/nesle-rl/src/preprocess/: config.rs  pipeline.rs  resize.rs  window.rs
crates/nesle-server/: Cargo.toml  README.md
crates/nesle-server/src/: client.rs  main.rs  protocol.rs  session.rs  wire.rs
crates/nesle-server/web/: app.js  index.html  styles.css
crates/nesle-server/web/js/: dom.js  downloads.js  panels.js  rendering.js  select.js
scripts/: ci_pgo_build.py  pgo_workload.py  stage_roms.py
