[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "nesle"
version = "0.1.0"
description = "Linux-first Rust-native NES reinforcement-learning environment."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
keywords = ["reinforcement-learning", "nes-learning-environment", "nes", "gymnasium"]
authors = [
    {name = "Zhiyuan Zhao"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
render = []
mario = [
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "opencv-python-headless>=4.5",
    "tensorboard>=2.9",
    "imageio>=2.5",
    "pandas>=1.5",
    "optuna>=3.5",
    "websockets>=12.0",
    "tqdm",
    "rich",
]
test = [
    "pytest>=7.0",
    "gymnasium>=1.0.0",
    "numpy>=1.20",
    "pettingzoo>=1.24",
]

[project.urls]
homepage = "https://github.com/tooichitake/gymnasium-mario"

[tool.maturin]
manifest-path = "crates/nesle-py/Cargo.toml"
module-name = "nesle._nesle"
python-source = "crates/nesle-py/python"
include = [
    "crates/nesle-py/python/nesle/roms/**/*.nes",
    "crates/nesle-py/python/nesle/roms/**/*.json",
]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -s --ignore build"
testpaths = ["scripts"]
python_files = ["test.py"]
python_classes = ["*Tests"]
norecursedirs = ["build", "target"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
