[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "nesle"
version = "0.1.0"
description = "Rust-native NES reinforcement-learning environment (Gymnasium + PettingZoo)."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
keywords = ["reinforcement-learning", "nes-learning-environment", "nes", "gymnasium"]
authors = [
    {name = "Zhiyuan Zhao"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
# Multi-agent (PettingZoo ParallelEnv) envs.
multiagent = ["pettingzoo>=1.24"]
# Connect to a running nesle-server as an RL agent peer (nesle.agent_client).
agent = ["websockets>=12.0"]
test = ["pytest>=7.0", "pettingzoo>=1.24"]

[project.urls]
homepage = "https://github.com/tooichitake/nesle"

[tool.maturin]
manifest-path = "crates/nesle-py/Cargo.toml"
module-name = "nesle._nesle"
python-source = "crates/nesle-py/python"
include = [
    "crates/nesle-py/python/nesle/roms/**/*.nes",
    "crates/nesle-py/python/nesle/roms/**/*.json",
]
features = ["pyo3/extension-module"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
